new-sock-shop/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-http-and-db
  namespace: sock-shop
spec:
  podSelector:
    matchLabels:
      name: catalogue  # Change this to match other pods if needed
  ingress:
  - ports:
    - protocol: TCP
      port: 80
  egress:
  - ports:
    - protocol: TCP
      port: 5432
    to:
    - ipBlock:
        cidr: 203.0.113.0/24
  policyTypes:
  - Ingress
  - Egress
